// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add a page prefix to anchors Should be added 1`] = `
<h1 id="index_first-header"
    data-original-article="index.html"
>
  <a class="yfm-anchor"
     href="#index_first-header"
     id="index_first-header"
  >
  </a>
  <a class="yfm-anchor"
     aria-hidden="true"
     href="#index"
     id="index"
  >
  </a>
</h1>
<h2 id="index_second-header">
  <a class="yfm-anchor"
     href="#index_second-header"
     id="index_second-header"
  >
  </a>
</h2>
`;

exports[`Adding the main title Should be added the page attributes 1`] = `
<h1 data-original-article="about.html">
  Title
  <a class="yfm-anchor"
     aria-hidden="true"
     href="#about"
     id="about"
  >
  </a>
</h1>
`;

exports[`Adding the main title Should be just added 1`] = `
<h1>
  Title
</h1>
<h2>
</h2>
`;

exports[`Decrease heading levels Should work 1`] = `
<h2>
</h2>
<h2>
</h2>
<h3>
</h3>
<h4>
</h4>
<h5>
</h5>
<h6>
</h6>
<h6>
</h6>
`;

exports[`Make links to pages as hashes to sections in a single page External links should not be replaced 1`] = `
<a href="https://ydocs.tech"
   target="_blank"
>
</a>
`;

exports[`Make links to pages as hashes to sections in a single page Should be replaced if file is not root 1`] = `
<a href="#_folder_index">
</a>
<a href="#_folder_index_third-header">
</a>
<a href="#_index">
</a>
`;

exports[`Make links to pages as hashes to sections in a single page Should be replaced if file is root 1`] = `
<a href="#folder_index">
</a>
<a href="#folder_index_third-header">
</a>
<a href="#index">
</a>
`;

exports[`Make links to pages as hashes to sections in a single page Should not be replaced as hash if a link is out of the root folder 1`] = `
<a href="../../index.html">
</a>
`;

exports[`Make links to pages as hashes to sections in a single page Should not be replaced as hash if a link is out of the single page (but not out of the root) 1`] = `
<a href="../../service2/index.html">
</a>
`;

exports[`Try to fix the first page header Should be fixed 1`] = `
<h1>
</h1>
<h2>
</h2>
`;

exports[`Try to fix the first page header Should be ignored if all is correct 1`] = `
<h1>
</h1>
<h2>
</h2>
`;

exports[`Try to fix the first page header Should be ignored if there are no headers 1`] = `
<div>
</div>
`;
